Bug 561251 - [14] CR followed by LF in the beginning of text block inserts an additional line
Change-Id: I34d6225df698a68289ff10dc497c3855ba1ce8fa
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>